{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 711,
  "lineage": "6d5114f6-fedc-1720-7bb0-c8b0a61ebb14",
  "resources": [
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e6845348c42ff9d",
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:elastic-ip/eipalloc-02e6845348c42ff9d",
            "domain": "vpc",
            "id": "eipalloc-02e6845348c42ff9d",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-179-152-18.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.152.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-ip"
            },
            "tags_all": {
              "Name": "dev-nat-ip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:internet-gateway/igw-0047664d1a3503f4d",
            "id": "igw-0047664d1a3503f4d",
            "owner_id": "297867106429",
            "tags": {
              "Name": "dev-internet-gateway"
            },
            "tags_all": {
              "Name": "dev-internet-gateway"
            },
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "dependencies": [
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e6845348c42ff9d",
            "association_id": "eipassoc-0e1596d5ed29d2e9e",
            "connectivity_type": "public",
            "id": "nat-04e3db175c8c6b929",
            "network_interface_id": "eni-0e327b9d2a1737212",
            "private_ip": "10.3.5.40",
            "public_ip": "54.179.152.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f1415c460ecc9fb0",
            "tags": {
              "Name": "dev-nat-gateway"
            },
            "tags_all": {
              "Name": "dev-nat-gateway"
            }
          },
          "dependencies": [
            "module.batch_fargate.aws_eip.nat_eip",
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_subnet.public_subnets",
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:route-table/rtb-06ebe37f3f9f7e522",
            "id": "rtb-06ebe37f3f9f7e522",
            "owner_id": "297867106429",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04e3db175c8c6b929",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route-table"
            },
            "tags_all": {
              "Name": "dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.batch_fargate.aws_eip.nat_eip",
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_nat_gateway.nat",
            "module.batch_fargate.aws_subnet.public_subnets",
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:route-table/rtb-043838745451b5724",
            "id": "rtb-043838745451b5724",
            "owner_id": "297867106429",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0047664d1a3503f4d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-route-table"
            },
            "tags_all": {
              "Name": "dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9d644af104ebb55",
            "route_table_id": "rtb-06ebe37f3f9f7e522",
            "subnet_id": "subnet-04566c9f25ba6e6ed"
          },
          "dependencies": [
            "module.batch_fargate.aws_eip.nat_eip",
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_nat_gateway.nat",
            "module.batch_fargate.aws_route_table.private-rt",
            "module.batch_fargate.aws_subnet.private_subnets",
            "module.batch_fargate.aws_subnet.public_subnets",
            "module.batch_fargate.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efd6255f66fe0be8",
            "route_table_id": "rtb-06ebe37f3f9f7e522",
            "subnet_id": "subnet-0189fa39ea07fa487"
          },
          "dependencies": [
            "module.batch_fargate.aws_eip.nat_eip",
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_nat_gateway.nat",
            "module.batch_fargate.aws_route_table.private-rt",
            "module.batch_fargate.aws_subnet.private_subnets",
            "module.batch_fargate.aws_subnet.public_subnets",
            "module.batch_fargate.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f4a7904a3295df9",
            "route_table_id": "rtb-06ebe37f3f9f7e522",
            "subnet_id": "subnet-0daedf98fa6a25f00"
          },
          "dependencies": [
            "module.batch_fargate.aws_eip.nat_eip",
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_nat_gateway.nat",
            "module.batch_fargate.aws_route_table.private-rt",
            "module.batch_fargate.aws_subnet.private_subnets",
            "module.batch_fargate.aws_subnet.public_subnets",
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e32dfad898300fff",
            "route_table_id": "rtb-043838745451b5724",
            "subnet_id": "subnet-0f1415c460ecc9fb0"
          },
          "dependencies": [
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_route_table.public-rt",
            "module.batch_fargate.aws_subnet.public_subnets",
            "module.batch_fargate.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028f9e0706b6eff5e",
            "route_table_id": "rtb-043838745451b5724",
            "subnet_id": "subnet-001f937f6827fe929"
          },
          "dependencies": [
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_route_table.public-rt",
            "module.batch_fargate.aws_subnet.public_subnets",
            "module.batch_fargate.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1d70e8014be520",
            "route_table_id": "rtb-043838745451b5724",
            "subnet_id": "subnet-0aedbe11c062209c2"
          },
          "dependencies": [
            "module.batch_fargate.aws_internet_gateway.gw",
            "module.batch_fargate.aws_route_table.public-rt",
            "module.batch_fargate.aws_subnet.public_subnets",
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "batch_fargate_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:security-group/sg-0bf72da56a45fb6ab",
            "description": "Security group for AWS Batch Fargate compute environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf72da56a45fb6ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "batch-fargate-security-group",
            "name_prefix": "",
            "owner_id": "297867106429",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:subnet/subnet-04566c9f25ba6e6ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.3.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04566c9f25ba6e6ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297867106429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-Private Subnet 1"
            },
            "tags_all": {
              "Name": "dev-Private Subnet 1"
            },
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "dependencies": [
            "module.batch_fargate.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:subnet/subnet-0189fa39ea07fa487",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.3.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0189fa39ea07fa487",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297867106429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-Private Subnet 2"
            },
            "tags_all": {
              "Name": "dev-Private Subnet 2"
            },
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "dependencies": [
            "module.batch_fargate.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:subnet/subnet-0daedf98fa6a25f00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.3.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daedf98fa6a25f00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297867106429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-Private Subnet 3"
            },
            "tags_all": {
              "Name": "dev-Private Subnet 3"
            },
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "dependencies": [
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:subnet/subnet-0f1415c460ecc9fb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.3.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1415c460ecc9fb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297867106429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-Public Subnet 1"
            },
            "tags_all": {
              "Name": "dev-Public Subnet 1"
            },
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "dependencies": [
            "module.batch_fargate.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:subnet/subnet-001f937f6827fe929",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.3.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001f937f6827fe929",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297867106429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-Public Subnet 2"
            },
            "tags_all": {
              "Name": "dev-Public Subnet 2"
            },
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "dependencies": [
            "module.batch_fargate.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:subnet/subnet-0aedbe11c062209c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.3.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aedbe11c062209c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297867106429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-Public Subnet 3"
            },
            "tags_all": {
              "Name": "dev-Public Subnet 3"
            },
            "vpc_id": "vpc-07864d7d5e8d2130d"
          },
          "dependencies": [
            "module.batch_fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.batch_fargate",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:297867106429:vpc/vpc-07864d7d5e8d2130d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0af0bfe1b7f3661a0",
            "default_route_table_id": "rtb-05471e826cf22ca07",
            "default_security_group_id": "sg-011d92d160d075f03",
            "dhcp_options_id": "dopt-043db0b57fbfecb97",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07864d7d5e8d2130d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05471e826cf22ca07",
            "owner_id": "297867106429",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}